crates/ferrum-interfaces/tests/ui/vnext/fail/unvalidated_operation_oracle_descriptor_is_not_deserialize.rs
use ferrum_interfaces::vnext::UnvalidatedOperationOracleDescriptor;

fn main() {
    let _: UnvalidatedOperationOracleDescriptor = serde_json::from_str("{}").unwrap();
}
